# refactor-dsl

./: .release.env  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  agents.md  catalog-info.yaml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  docs.yml
Formula/: refactor-dsl.rb
docs/: book.toml
docs/src/: SUMMARY.md  api.md  cli.md  getting-started.md  introduction.md  languages.md  multi-repo.md  tree-sitter-queries.md
docs/src/discovery/: README.md  dependency.md  framework.md  language.md  metrics.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/lsp/: README.md  auto-install.md  configuration.md  rename.md
docs/src/matchers/: README.md  ast.md  file.md  git.md
docs/src/refactoring/: README.md  dead-code.md  extract.md  inline.md  move.md  safe-delete.md  signature.md
docs/src/transforms/: README.md  ast.md  text.md
examples/: analyze_library.rs  angular_upgrade.rs  extract_function.rs  find_dead_code.rs  lsp_rename.rs  match_repos.rs  org_angular_upgrade.rs  org_discovery.rs  restructure.rs  rewrite_code.rs  upgrade_analyzer.rs
src/: diff.rs  error.rs  lib.rs  refactor.rs
src/analyzer/: change.rs  config.rs  detector.rs  extractor.rs  generator.rs  mod.rs  signature.rs
src/codemod/: executor.rs  filter.rs  mod.rs  upgrade.rs
src/codemod/discovery/: dependency.rs  framework.rs  language.rs  metrics.rs  mod.rs
src/diff/: mod.rs
src/git/: auth.rs  branch.rs  commit.rs  mod.rs  push.rs
src/github/: client.rs  clone.rs  mod.rs  pr.rs  repos.rs
src/lang/: csharp.rs  go.rs  java.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/lsp/: client.rs  config.rs  mod.rs  rename.rs  types.rs
src/lsp/installer/: mod.rs  package.rs  platform.rs
src/matcher/: ast.rs  file.rs  git.rs  mod.rs
src/refactor/: mod.rs
src/refactor/operations/: context.rs  dead_code.rs  extract.rs  inline.rs  mod.rs  move_ops.rs  safe_delete.rs  signature.rs
src/scope/: binding.rs  mod.rs  reference.rs  usage.rs
src/transform/: ast.rs  file.rs  mod.rs  text.rs
tests/: integration_tests.rs  upgrade_fixtures_test.rs
tests/fixtures/csharp_library/client/: Program.cs
tests/fixtures/csharp_library/library_v1/: MyLib.cs
tests/fixtures/csharp_library/library_v2/: MyLib.cs
(+25 files in other folders)
