[package]
name = "refactor-dsl"
version = "0.1.0"
edition = "2024"
description = "A DSL for multi-language code refactoring with Git-aware matching"
license = "MIT"

[lib]
name = "refactor_dsl"
path = "src/lib.rs"

[[bin]]
name = "refactor"
path = "src/bin/refactor.rs"

[dependencies]
# Tree-sitter for multi-language parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# Git operations
git2 = "0.19"

# File system
walkdir = "2.5"
globset = "0.4"

# Pattern matching
regex = "1.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Diff generation
similar = "2.6"

# Tree-sitter streaming iterator
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3.14"
