[package]
name = "refactor-dsl"
version = "0.1.0"
edition = "2024"
description = "A DSL for multi-language code refactoring with Git-aware matching"
license = "MIT"

[lib]
name = "refactor_dsl"
path = "src/lib.rs"

[[bin]]
name = "refactor"
path = "src/bin/refactor.rs"

[dependencies]
# Tree-sitter for multi-language parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"

# Git operations
git2 = "0.20"

# File system
walkdir = "2.5"
globset = "0.4"

# Pattern matching
regex = "1.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Diff generation
similar = "2.6"

# Tree-sitter streaming iterator
streaming-iterator = "0.1"

# LSP support
lsp-types = "0.97"
url = "2.5"

# LSP server installer
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2.1"

# Code generation
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
prettyplease = "0.2"

# GitHub API
octocrab = "0.49"
tokio = { version = "1.44", features = ["rt-multi-thread"] }
serde_yaml = "0.9"
flate2 = "1.0"
zip = "7.0.0"
dirs = "6.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.23"

[features]
default = []
lsp = []
